--- a/themes/one/layouts/partials/header.html
+++ b/themes/one/layouts/partials/header.html
@@ -4,7 +4,7 @@
   <!-- Title -->
   <div class=" start-md">
     <div class="header-title">
-      <a href="{{ .Site.LanguagePrefix }}/"
+      <a href="https://bucin-kode.github.io/kuliahphp/"
       >{{ or .Site.Params.headTitle .Site.Author.name }}</a>
     </div>
   </div>  
