Trying Implemented PWA

--- a/themes/one/layouts/partials/footer.html
+++ b/themes/one/layouts/partials/footer.html
@@ -1,4 +1,20 @@
 <div class="site-footer">
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker
+        .register('/sw.js', { scope: '/' })
+        .then(function (registration) {
+          //console.log('Service Worker Registered');
+        });
+
+      navigator.serviceWorker
+        .ready
+        .then(function (registration) {
+          //console.log('Service Worker Ready');
+        });
+    }
+  </script>
+
   <!-- {{ range .Site.Params.socials }}
   <div class="site-footer-item">
     <a href="{{ .link }}" target="_blank">{{ .name }}</a>
