--- a/themes/one/layouts/partials/head.html
+++ b/themes/one/layouts/partials/head.html
@@ -58,6 +58,7 @@
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="manifest" href="/manifest.json">
 
   {{ if .Site.Params.TwitterCards }}{{ template "_internal/twitter_cards.html" . }}{{ end }}
   {{ .Site.Params.extraHead | safeHTML }}
