--- a/themes/one/layouts/partials/footer.html
+++ b/themes/one/layouts/partials/footer.html
@@ -1,19 +1,6 @@
 <div class="site-footer">
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker
-        .register('/sw.js', { scope: '/' })
-        .then(function (registration) {
-          //console.log('Service Worker Registered');
-        });
-
-      navigator.serviceWorker
-        .ready
-        .then(function (registration) {
-          //console.log('Service Worker Ready');
-        });
-    }
-  </script>
+  
+  <script src="register.js"></script>
 
   <!-- {{ range .Site.Params.socials }}
   <div class="site-footer-item">
